--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,11 @@ canvas {
     }
     .direcional > button {
         background-color: transparent;
+        display: block;
         color: white;
         border: 1px solid black;
+        width: 100%;
+        height: 100%;
     }
     .direcional > button:hover {
         background-color: black;
