--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ canvas {
     }
     div.direcional {
         display: grid;
-        width: 150px;
+        width: 200px;
         grid-template-rows: 50px 50px 50px;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 15px;
@@ -93,11 +93,13 @@ canvas {
         background-color: transparent;
         display: block;
         color: white;
-        border: 1px solid black;
+        border: 1px solid white;
         width: 50px;
         height: 50px;
     }
-    
+    .direcional > div:hover {
+        background-color: black;
+    }
     .up {
         grid-column-start: 2;
         grid-column-end: 3;
